// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`changelog generation > should generate changelog for release 'v0.7.0' 1`] = `
"# Changelog


## &ensp; [\` 📦 v0.7.0  \`](https://github.com/kh4f/relion/compare/v0.6.0...v0.7.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **core**: add \`defaultChangelogSections\` export [\`86da78a\`](https://github.com/kh4f/relion/commit/86da78a)
- **changelog**: extend section definitions with optional \`id\` property [\`41c838a\`](https://github.com/kh4f/relion/commit/41c838a)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🚜 Refactoring
- **templates**: use \`id\` property instead of \`commitType\` for breaking changes condition [\`205b9f8\`](https://github.com/kh4f/relion/commit/205b9f8)
- **defaults**: update \`prevReleaseTagPattern\` regex to allow optional leading \`v\` [\`1c631eb\`](https://github.com/kh4f/relion/commit/1c631eb)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;📚 Documentation
- **commit-naming**: update commit message guidelines with clarified rules and examples [\`94ca4fc\`](https://github.com/kh4f/relion/commit/94ca4fc)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🎨 Style
- **changelog**: update title for default \`style\` section from 'Formatting' to 'Style' [\`d47d472\`](https://github.com/kh4f/relion/commit/d47d472)
- **templates**: 
  - remove emoji from footer commit link [\`7ea3c1d\`](https://github.com/kh4f/relion/commit/7ea3c1d)
  - update release footer with italic link and \`•\` separator [\`7e56b38\`](https://github.com/kh4f/relion/commit/7e56b38)
  - simplify release footer by omitting \`prevTag → tag\` [\`df84af2\`](https://github.com/kh4f/relion/commit/df84af2)
  - update footer link label to 'All Release Commits' [\`2ca80a6\`](https://github.com/kh4f/relion/commit/2ca80a6)
  - update commit scope formatting to bold with colon [\`37dcb53\`](https://github.com/kh4f/relion/commit/37dcb53)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🛠️ Chores
- **renovate**: add initial configuration for Renovate [\`bc296e9\`](https://github.com/kh4f/relion/commit/bc296e9)

##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.6.0...v0.7.0) &ensp;•&ensp; _Sep 11, 2025_


"
`;

exports[`changelog generation > should generate changelog for release 'v0.7.0' without scope groups 1`] = `
"# Changelog


## &ensp; [\` 📦 v0.7.0  \`](https://github.com/kh4f/relion/compare/v0.6.0...v0.7.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **core**: add \`defaultChangelogSections\` export [\`86da78a\`](https://github.com/kh4f/relion/commit/86da78a)
- **changelog**: extend section definitions with optional \`id\` property [\`41c838a\`](https://github.com/kh4f/relion/commit/41c838a)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🚜 Refactoring
- **templates**: use \`id\` property instead of \`commitType\` for breaking changes condition [\`205b9f8\`](https://github.com/kh4f/relion/commit/205b9f8)
- **defaults**: update \`prevReleaseTagPattern\` regex to allow optional leading \`v\` [\`1c631eb\`](https://github.com/kh4f/relion/commit/1c631eb)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;📚 Documentation
- **commit-naming**: update commit message guidelines with clarified rules and examples [\`94ca4fc\`](https://github.com/kh4f/relion/commit/94ca4fc)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🎨 Style
- **changelog**: update title for default \`style\` section from 'Formatting' to 'Style' [\`d47d472\`](https://github.com/kh4f/relion/commit/d47d472)
- **templates**: remove emoji from footer commit link [\`7ea3c1d\`](https://github.com/kh4f/relion/commit/7ea3c1d)
- **templates**: update release footer with italic link and \`•\` separator [\`7e56b38\`](https://github.com/kh4f/relion/commit/7e56b38)
- **templates**: simplify release footer by omitting \`prevTag → tag\` [\`df84af2\`](https://github.com/kh4f/relion/commit/df84af2)
- **templates**: update footer link label to 'All Release Commits' [\`2ca80a6\`](https://github.com/kh4f/relion/commit/2ca80a6)
- **templates**: update commit scope formatting to bold with colon [\`37dcb53\`](https://github.com/kh4f/relion/commit/37dcb53)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🛠️ Chores
- **renovate**: add initial configuration for Renovate [\`bc296e9\`](https://github.com/kh4f/relion/commit/bc296e9)

##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.6.0...v0.7.0) &ensp;•&ensp; _Sep 11, 2025_


"
`;

exports[`changelog generation > should generate changelog for release 'v0.8.0' 1`] = `
"# Changelog


## &ensp; [\` 📦 v0.8.0  \`](https://github.com/kh4f/relion/compare/v0.7.0...v0.8.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⚠️ BREAKING CHANGES
- The \`defaultChangelogSections\` export has been removed from the public API. Use \`changelogSectionsSelector\` instead, which provides the same sections plus \`pick\` and \`omit\` methods. <sup>[1]</sup>
- The \`sections\` option in changelog configuration is now an object with section IDs as keys instead of an array. <sup>[2]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **utils**: add \`changelogSectionsSelector\` with \`pick\` and \`omit\` methods [\`3febcbc\`](https://github.com/kh4f/relion/commit/3febcbc) ⚠️<sup>[1]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🚜 Refactoring
- **changelog**: 
  - change \`sections\` from array to object format for better usability [\`349fed9\`](https://github.com/kh4f/relion/commit/349fed9) ⚠️<sup>[2]</sup>
  - rename \`commitGroups\` property to \`commitTypeGroups\` [\`6ec89a8\`](https://github.com/kh4f/relion/commit/6ec89a8)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🏷️ Types
- **defaults**: use \`satisfies ChangelogSectionsMap\` for \`defaultChangelogSections\` [\`4343e6f\`](https://github.com/kh4f/relion/commit/4343e6f)

##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.7.0...v0.8.0) &ensp;•&ensp; _Sep 12, 2025_


"
`;

exports[`changelog generation > should generate changelog for release 'v0.8.0' without scope groups 1`] = `
"# Changelog


## &ensp; [\` 📦 v0.8.0  \`](https://github.com/kh4f/relion/compare/v0.7.0...v0.8.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⚠️ BREAKING CHANGES
- The \`defaultChangelogSections\` export has been removed from the public API. Use \`changelogSectionsSelector\` instead, which provides the same sections plus \`pick\` and \`omit\` methods. <sup>[1]</sup>
- The \`sections\` option in changelog configuration is now an object with section IDs as keys instead of an array. <sup>[2]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **utils**: add \`changelogSectionsSelector\` with \`pick\` and \`omit\` methods [\`3febcbc\`](https://github.com/kh4f/relion/commit/3febcbc) ⚠️<sup>[1]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🚜 Refactoring
- **changelog**: change \`sections\` from array to object format for better usability [\`349fed9\`](https://github.com/kh4f/relion/commit/349fed9) ⚠️<sup>[2]</sup>
- **changelog**: rename \`commitGroups\` property to \`commitTypeGroups\` [\`6ec89a8\`](https://github.com/kh4f/relion/commit/6ec89a8)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🏷️ Types
- **defaults**: use \`satisfies ChangelogSectionsMap\` for \`defaultChangelogSections\` [\`4343e6f\`](https://github.com/kh4f/relion/commit/4343e6f)

##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.7.0...v0.8.0) &ensp;•&ensp; _Sep 12, 2025_


"
`;

exports[`changelog generation > should generate changelog with release changelog URL in footer 1`] = `
"# Changelog


## &ensp; [\` 📦 v0.9.0  \`](https://github.com/kh4f/relion/compare/v0.8.0...v0.9.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **changelog**: 
  - add \`maxLinesPerRelease\` option to limit changelog length per release [\`037ebd8\`](https://github.com/kh4f/relion/commit/037ebd8)
  - display issue/pr references next to commits [\`a59963f\`](https://github.com/kh4f/relion/commit/a59963f)
  - filter out reverted commits and their reverts within same release [\`79274ca\`](https://github.com/kh4f/relion/commit/79274ca)
  - add release changelog link to footer template [\`011abc0\`](https://github.com/kh4f/relion/commit/011abc0)
- **commit**: support \`raw\` field in \`Reference\` for footer refs parsing [\`0c6cf75\`](https://github.com/kh4f/relion/commit/0c6cf75)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🩹 Fixes
- **config**: 
  - merge user context with default one [\`2f17c70\`](https://github.com/kh4f/relion/commit/2f17c70)
  - allow mixed \`ParsedCommit\` and \`RawCommit\` types in \`Context.commits\` [\`be9204c\`](https://github.com/kh4f/relion/commit/be9204c)
- **commits-parser**: prevent body from being parsed as footer when containing ref keywords [\`3132b13\`](https://github.com/kh4f/relion/commit/3132b13)
- **changelog**: 
  - move inline partials to defaults to allow user overrides [\`80eeecf\`](https://github.com/kh4f/relion/commit/80eeecf)
  - resolve Handlebars state leakage by using local instance [\`a934ed4\`](https://github.com/kh4f/relion/commit/a934ed4)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🚜 Refactoring
- **commits-parser**: 
  - rename \`parser\` parameter to \`commitsParser\` for consistency [\`c46e41b\`](https://github.com/kh4f/relion/commit/c46e41b)
  - make \`commitsParser\` and \`prevReleaseTagPattern\` optional with default values [\`c1f942a\`](https://github.com/kh4f/relion/commit/c1f942a)
- **tests**: 
  - separate config resolution tests into \`config-resolver.test.ts\` [\`866f177\`](https://github.com/kh4f/relion/commit/866f177)
  - extract version bump tests to \`bump.test.ts\` [\`747f953\`](https://github.com/kh4f/relion/commit/747f953)
- **templates**: replaces direct newlines with the \`br\` partial [\`2b8c32c\`](https://github.com/kh4f/relion/commit/2b8c32c)
- **defaults**: remove unnecessary braces and return statement in \`isBreakingCommitInOtherTypeGroup\` helper [\`8bbb9be\`](https://github.com/kh4f/relion/commit/8bbb9be)
- **codebase**: rename \`VersionedFile\` type and related entities to \`Bumper\` [\`8ad16fd\`](https://github.com/kh4f/relion/commit/8ad16fd)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🎨 Style
- **tests**: inline \`changelog\` option in custom commits changelog test [\`d2e5287\`](https://github.com/kh4f/relion/commit/d2e5287)

##### &emsp;&ensp;&nbsp;&nbsp; [_Release Changelog_](https://github.com/kh4f/relion/blob/main/CHANGELOG.md#--v090-) &ensp;•&ensp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.8.0...v0.9.0) &ensp;•&ensp; _Oct 5, 2025_


"
`;

exports[`changelog generation > should generate changelog with scope groups for custom commits 1`] = `
"### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- unscoped commit 2 fake_269b30b
- unscoped commit 1 fake_b86c57f
- **scope 2**: 
  - scoped commit 3 fake_728ea8b
  - scoped commit 2 fake_fdf4bef
- **scope 1**: scoped commit 1 fake_1bf47c1

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🩹 Fixes
- unscoped commit 3 fake_923cc1a

"
`;

exports[`changelog line limit per release > should limit changelog to 10 lines for release v0.17.0 1`] = `
"# Changelog


## &ensp; [\` 📦 v0.17.0  \`](https://github.com/kh4f/relion/compare/v0.16.0...v0.17.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⚠️ BREAKING CHANGES
- The \`VersionedFile\` type now uses \`file\` and \`pattern\` properties instead of \`filePath\` and \`versionPattern\`. 
- The \`silent\` option has been removed. Use \`logLevel\` instead to control logging verbosity. 
- The \`bumpResults\` property is no longer returned by the main \`relion()\` function. 

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **changelog**: add function support for \`partials\` to transform fallback content [\`7f070fd\`](https://github.com/kh4f/relion/commit/7f070fd)
- **bump**: add support for custom replacement for versioned files [\`77aa591\`](https://github.com/kh4f/relion/commit/77aa591)
- **config**: 
  - allow skipping bump for \`versionSourceFile\` via \`!versionSourceFile\` in \`bump\` array [\`ba77ad8\`](https://github.com/kh4f/relion/commit/ba77ad8)
  - support extracting current version from latest release tag instead of file [\`9d96a36\`](https://github.com/kh4f/relion/commit/9d96a36)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🩹 Fixes
- **config-resolver**: preserve all default versioned file attributes when matching custom file [\`33aa299\`](https://github.com/kh4f/relion/commit/33aa299)

##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.16.0...v0.17.0) &ensp;•&ensp; _Sep 28, 2025_


"
`;

exports[`changelog line limit per release > should limit changelog to 20 lines for release v0.17.0 1`] = `
"# Changelog


## &ensp; [\` 📦 v0.17.0  \`](https://github.com/kh4f/relion/compare/v0.16.0...v0.17.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⚠️ BREAKING CHANGES
- The \`VersionedFile\` type now uses \`file\` and \`pattern\` properties instead of \`filePath\` and \`versionPattern\`. <sup>[1]</sup>
- The \`silent\` option has been removed. Use \`logLevel\` instead to control logging verbosity. <sup>[2]</sup>
- The \`bumpResults\` property is no longer returned by the main \`relion()\` function. <sup>[3]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **changelog**: add function support for \`partials\` to transform fallback content [\`7f070fd\`](https://github.com/kh4f/relion/commit/7f070fd)
- **bump**: add support for custom replacement for versioned files [\`77aa591\`](https://github.com/kh4f/relion/commit/77aa591)
- **config**: 
  - allow skipping bump for \`versionSourceFile\` via \`!versionSourceFile\` in \`bump\` array [\`ba77ad8\`](https://github.com/kh4f/relion/commit/ba77ad8)
  - support extracting current version from latest release tag instead of file [\`9d96a36\`](https://github.com/kh4f/relion/commit/9d96a36)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🩹 Fixes
- **config-resolver**: preserve all default versioned file attributes when matching custom file [\`33aa299\`](https://github.com/kh4f/relion/commit/33aa299)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🚜 Refactoring
- **utils**: extract \`hbs-load-hook\` to separate module to avoid registration conflict [\`88c6fea\`](https://github.com/kh4f/relion/commit/88c6fea)
- **release**: update relion config to use 'logLevel' [\`591e2c8\`](https://github.com/kh4f/relion/commit/591e2c8)
- **config**: 
  - rename \`filePath\` and \`versionPattern\` to \`file\` and \`pattern\` [\`88f1446\`](https://github.com/kh4f/relion/commit/88f1446) ⚠️<sup>[1]</sup>
  - replace \`silent\` option with \`logLevel\` for improved logging control [\`9cfb8af\`](https://github.com/kh4f/relion/commit/9cfb8af) ⚠️<sup>[2]</sup>
- **logger**: remove unused \`deepLog\` function [\`9c0b9a2\`](https://github.com/kh4f/relion/commit/9c0b9a2)
- **commits-parser**: replace \`console.warn\` with \`warn\` utility function [\`9982505\`](https://github.com/kh4f/relion/commit/9982505)
- **core**: remove \`bumpResults\` from \`relion()\` return values [\`0626642\`](https://github.com/kh4f/relion/commit/0626642) ⚠️<sup>[3]</sup>
- **vitest**: use \`silent: true\` in config instead of mocking \`console.log\` [\`9cb40a7\`](https://github.com/kh4f/relion/commit/9cb40a7)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🎨 Style
- **config-resolver**: add quotes around \`versionSourceFile.file\` in log output [\`7f08be2\`](https://github.com/kh4f/relion/commit/7f08be2)

##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.16.0...v0.17.0) &ensp;•&ensp; _Sep 28, 2025_


"
`;

exports[`commit references rendering > should render commit references as hyperlinks 1`] = `
"### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **core**: add new feature [\`123456b\`](https://github.com/kh4f/relion/commit/123456b) ([#20](https://github.com/kh4f/relion/issues/20), [kh4f/relion#30](https://github.com/kh4f/relion/issues/30))

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🩹 Fixes
- **core**: fix bug [\`123456a\`](https://github.com/kh4f/relion/commit/123456a) ([#10](https://github.com/kh4f/relion/issues/10))

"
`;

exports[`commit references rendering > should render commit references as plain text 1`] = `
"### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **core**: add new feature 123456b (#20, kh4f/relion#30)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🩹 Fixes
- **core**: fix bug 123456a (#10)

"
`;

exports[`partials customization > should generate changelog with customized partials 1`] = `"CUSTOM FOOTER --- **This is a custom partial** ---"`;

exports[`partials customization > should generate changelog with transformed footer and custom changelog URL partial 1`] = `
"# Changelog


## &ensp; [\` 📦 v0.8.0  \`](https://github.com/kh4f/relion/compare/v0.7.0...v0.8.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⚠️ BREAKING CHANGES
- The \`defaultChangelogSections\` export has been removed from the public API. Use \`changelogSectionsSelector\` instead, which provides the same sections plus \`pick\` and \`omit\` methods. <sup>[1]</sup>
- The \`sections\` option in changelog configuration is now an object with section IDs as keys instead of an array. <sup>[2]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **utils**: add \`changelogSectionsSelector\` with \`pick\` and \`omit\` methods [\`3febcbc\`](https://github.com/kh4f/relion/commit/3febcbc) ⚠️<sup>[1]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🚜 Refactoring
- **changelog**: 
  - change \`sections\` from array to object format for better usability [\`349fed9\`](https://github.com/kh4f/relion/commit/349fed9) ⚠️<sup>[2]</sup>
  - rename \`commitGroups\` property to \`commitTypeGroups\` [\`6ec89a8\`](https://github.com/kh4f/relion/commit/6ec89a8)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🏷️ Types
- **defaults**: use \`satisfies ChangelogSectionsMap\` for \`defaultChangelogSections\` [\`4343e6f\`](https://github.com/kh4f/relion/commit/4343e6f)

##### &emsp;&ensp;&nbsp;&nbsp; [_Release Changelog_](https://github.com/kh4f/relion/blob/main/CHANGELOG.md) &ensp;•&ensp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.7.0...v0.8.0) &ensp;•&ensp; _Sep 12, 2025_


"
`;

exports[`partials customization > should generate changelog with transformed partials 1`] = `
"# Changelog


CUSTOM HEADER---## &ensp; [\` 📦 v0.8.0  \`](https://github.com/kh4f/relion/compare/v0.7.0...v0.8.0)

---### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⚠️ BREAKING CHANGES
- The \`defaultChangelogSections\` export has been removed from the public API. Use \`changelogSectionsSelector\` instead, which provides the same sections plus \`pick\` and \`omit\` methods. <sup>[1]</sup>
- The \`sections\` option in changelog configuration is now an object with section IDs as keys instead of an array. <sup>[2]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **utils**: add \`changelogSectionsSelector\` with \`pick\` and \`omit\` methods [\`3febcbc\`](https://github.com/kh4f/relion/commit/3febcbc) ⚠️<sup>[1]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🚜 Refactoring
- **changelog**: 
  - change \`sections\` from array to object format for better usability [\`349fed9\`](https://github.com/kh4f/relion/commit/349fed9) ⚠️<sup>[2]</sup>
  - rename \`commitGroups\` property to \`commitTypeGroups\` [\`6ec89a8\`](https://github.com/kh4f/relion/commit/6ec89a8)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🏷️ Types
- **defaults**: use \`satisfies ChangelogSectionsMap\` for \`defaultChangelogSections\` [\`4343e6f\`](https://github.com/kh4f/relion/commit/4343e6f)

CUSTOM FOOTER---##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.7.0...v0.8.0) &ensp;•&ensp; _Sep 12, 2025_


---"
`;
